external-crates/move/crates/move-compiler/tests/move_2024/expansion/friend_decl_aliased_struct.exp
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/expansion/friend_decl_aliased_struct.move:8:12
  │
8 │     friend M;
  │            ^ Unexpected module member identifier. A module member identifier is not a valid module

